--- a/client/src/app/components/postform.component.html
+++ b/client/src/app/components/postform.component.html
@@ -21,7 +21,8 @@
             <label for="">Picture</label>
           </td>
           <td>
-            <input #imageInput
+            <input
+              #imageInput
               class="m-3 form-control"
               type="file"
               name="picture"
@@ -39,6 +40,13 @@
               [disabled]="postForm.invalid"
             >
               Submit
+            </button>
+            <button
+              class="btn btn-outline-warning"
+              type="button"
+              [routerLink]="['/results']"
+            >
+              Get Results
             </button>
           </td>
         </tr>
